resolvendo problema do overlap do conteúdo na scrollbar

--- a/public/css/view_contato.css
+++ b/public/css/view_contato.css
@@ -1,6 +1,7 @@
 html {
     overflow: hidden;
     height: 100%;
+    padding-top: 86px;
 }
 
 body {
@@ -11,7 +12,6 @@ body {
 html,
 body {
     margin: 0;
-    padding: 0;
     height: 100%;
     width: 100%;
 }
@@ -84,7 +84,7 @@ section {
 }
 
 .pagina-contato {
-    padding-top: 75px;
+    padding-top: 0.25rem;
     background-color: #DFDDDD;
 }
 
