--- a/public/css/view_produto.css
+++ b/public/css/view_produto.css
@@ -6,6 +6,7 @@ body {
 html {
     overflow: hidden;
     height: 100%;
+    padding-top: 86px;
 }
 
 body {
@@ -59,7 +60,6 @@ body {
     padding: 1rem 1rem;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
-    padding-top: 85px;
 }
 
 .btn:hover {
