--- a/public/css/view_produtos.css
+++ b/public/css/view_produtos.css
@@ -1,6 +1,7 @@
 html {
     overflow: hidden;
     height: 100%;
+    padding-top: 86px;
 }
 
 body {
